# openai

./: README.md  requirements.txt  resposta.json  test_joao.py
chatgpt/: .env  pyproject.toml
chatgpt-basico/: .env  README.md  pyproject.toml
chatgpt-basico/exemplos/: parametros1.py  parametros4.py  resposta.json  test.py
chatgpt-basico/output/: email.txt
chatgpt-basico/utils/: __init__.py
chatgpt/exemplos/: basico.py  chat_pao_de_queijo.py  funcoes.py  parametros2.py  parametros3.py  projeto_emails.py  stream.py  test.py
moderacao/: test.py
moderacao/exemplos/: mod_basica.py  modelos.py  verificador_textos.py
moderacao/output/: latest.json  stable.json
utils/utils/: arquivo.py
voz/exemplos/: chat_voz.py  speech_to_text.py  text_to_speech.py  text_to_speech_parametros.py  traducao.py
