[tool.poetry]
name = "chatgpt-basico"
version = "0.1.0"
description = ""
authors = ["sousagomide <sousagomide@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.68.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
